tests/fixtures/invalid/const_assignment.c
int main() {
    const int value = 3;
    value = 4;
    return value;
}
